# minmd

./: .gitignore  CMakeLists.txt  INSTALL  INSTALL.md  LICENSE  Makefile  MinMDConfig.h.in  README.md  build.py
notes/: README.md  cmake.md
notes/cmake/: README.md
notes/cmake/src_lib/: README.md
notes/cmake/src_lib/foo/: CMakeLists.txt  Makefile  README.md  build.sh
notes/cmake/src_lib/foo/bar/: CMakeLists.txt  bar.h  softplus.cpp  softplus.h  test.cpp
notes/cmake/src_lib/foo/def/: CMakeLists.txt  README.md  def.h
notes/git/: REAMDE.md
src/: CMakeLists.txt  Makefile  README.md
src/lib/: CMakeLists.txt  minmd_lib.h
src/lib/def/: CMakeLists.txt  def.h  test.c
src/lib/math/: CMakeLists.txt  minmd_math.h  softplus.cpp  softplus.h  test.cpp
src/lib/math/rng/: test.c
src/lib/math/stat_accum/: CMakeLists.txt  stat_accum.h
src/lib/math/vec/: README.md
src/lib/math/vec/vec2d/: CMakeLists.txt  vec2d.h
src/lib/math/vec/vec3d/: CMakeLists.txt  vec3d.h
src/lib/mdutils/: CMakeLists.txt  minmd_mdutils.h  test.c
src/lib/minmd_basic/: CMakeLists.txt  minmd_basic.h
src/lib/minmd_basic/def/: CMakeLists.txt
src/lib/minmd_basic/utils/: CMakeLists.txt  test.c  utils.h
src/lib/minmd_math/: CMakeLists.txt  minmd_math.h
src/lib/minmd_math/rng/: CMakeLists.txt  pcg32.h  rng.h  test.c
src/lib/minmd_math/stat_accum/: CMakeLists.txt  stat_accum.h  test.c
src/lib/minmd_math/vec/: CMakeLists.txt  test.c  vec.h
src/lib/minmd_math/vec/vec2d/: CMakeLists.txt  test.c  vec2d.h
src/lib/minmd_math/vec/vec3d/: CMakeLists.txt  test.c  vec3d.h
src/lib/minmd_md/: CMakeLists.txt  minmd_md.h
src/lib/minmd_md/constraint/: CMakeLists.txt  Makefile  constraint.h  constraint_basic.h  constraint_pairlist.h  constraint_settle.h  constraint_shake.h  shake.h  test.c
src/lib/minmd_md/constraint/tests/: CMakeLists.txt  Makefile  test_settle.c  test_shake.c
src/lib/minmd_md/ewald/: CMakeLists.txt  README.md  ewald.h  ewald_basic.h  ewald_data.h  ewald_direct.h  mktest.sh  test.c
src/lib/minmd_md/mdutils/: CMakeLists.txt  README.md  mdutils.h  test.c
src/lib/minmd_md/thermostat/: CMakeLists.txt  Makefile  test.c  thermostat.h  thermostat_basic.h  thermostat_null.h  thermostat_vrescaling.h  vrescaling.h
src/lib/minmd_md/thermostats/: CMakeLists.txt  test.c  thermostats.h  vrescaling.h
src/lib/utils/: CMakeLists.txt  minmd_utils.h  test.c
src/lib/vel/: CMakeLists.txt
